--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,5 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+FeedPet/FeedPet/__pycache__/__init__.cpython-37.pyc
+FeedPet/FeedPet/__pycache__/settings.cpython-37.pyc
