--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,6 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+FeedPet/FeedPet/__pycache__/__init__.cpython-37.pyc
+FeedPet/FeedPet/__pycache__/settings.cpython-37.pyc
 
