--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ GitHub.sublime-settings
 FeedPet/FeedPet/__pycache__/__init__.cpython-37.pyc
 FeedPet/FeedPet/__pycache__/settings.cpython-37.pyc
 
+FeedPet/.idea/workspace.xml
